ref; add btc fee
